new proj/src/objects/BMI_Integration_Params__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>The SFDC - BMI integration parameters such as the SOAP XML, Endpoint, User credentials etc are stored in this custom setting</description>
    <fields>
        <fullName>BMI_User_ID__c</fullName>
        <description>The BM login user id which will be used to send the SFDC SOAP messages to BM</description>
        <inlineHelpText>The BM login user id which will be used to send the SFDC SOAP messages to BM</inlineHelpText>
        <label>BMI User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMI_User_Pwd__c</fullName>
        <description>BM Integration User&apos;s Password</description>
        <inlineHelpText>BM Integration User&apos;s Password</inlineHelpText>
        <label>BMI User Pwd</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <description>BM End Point URL to which the SFDC SOAP Messges will be sent</description>
        <inlineHelpText>BM End Point URL to which the SFDC SOAP Messges will be sent</inlineHelpText>
        <label>End Point URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Error_Email__c</fullName>
        <description>Any BM integration errors will be sent to this email address.</description>
        <inlineHelpText>Any BM integration errors will be sent to this email address.</inlineHelpText>
        <label>Error Email</label>
        <type>Email</type>
    </fields>
    <label>BMI Integration Params</label>
</CustomObject>